RESOLVED FIXED58395
Exceptions thrown from property getters called from Array prototype functions can be missed
https://bugs.webkit.org/show_bug.cgi?id=58395
Summary Exceptions thrown from property getters called from Array prototype functions...
Gavin Barraclough
Reported 2011-04-12 16:42:54 PDT
This is caught by an ASSERT in the top of Interpreter::executeCall. Check for exceptions after accessing properties that could be getters.
Attachments
The patch (5.98 KB, patch)
2011-04-12 16:49 PDT, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2011-04-12 16:49:47 PDT
Created attachment 89308 [details] The patch
Oliver Hunt
Comment 2 2011-04-12 17:00:43 PDT
Comment on attachment 89308 [details] The patch r=me assuming perf is good
Gavin Barraclough
Comment 3 2011-04-12 17:13:56 PDT
fixed in r83669
Note You need to log in before you can comment on or make changes to this bug.