https://bugs.webkit.org/show_bug.cgi?id=58395 Exceptions thrown from property getters called from Array prototype functions can be missed

Reviewed by Oliver Hunt.

Source/JavaScriptCore: 

This is caught by an ASSERT in the top of Interpreter::executeCall.
Check for exceptions after accessing properties that could be getters.

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncSort):
(JSC::arrayProtoFuncFilter):
(JSC::arrayProtoFuncMap):
(JSC::arrayProtoFuncEvery):
(JSC::arrayProtoFuncForEach):
(JSC::arrayProtoFuncSome):
(JSC::arrayProtoFuncReduce):
(JSC::arrayProtoFuncReduceRight):
    - Add exception checks.

LayoutTests: 

Added layout test.

* fast/js/array-proto-func-property-getter-except-expected.txt: Added.
* fast/js/array-proto-func-property-getter-except.html: Added.
* fast/js/script-tests/array-proto-func-property-getter-except.js: Added.
(test.propertyGetter):



git-svn-id: svn://svn.chromium.org/blink/trunk@83669 bbb929c8-8fbe-4397-9dbb-9b2b20218538